--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "dotenv": "^16.4.7",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
@@ -31,6 +31,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.1",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.17",
     "vite": "^6.1.0"
   }
