--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "povstore",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Projeto de minha autoria, sendo planejado e desenvolvido do início ao fim de forma individual. Esse projeto é o resultado da terceira etapa do Curso Carreira FullStack Python da Coderhouse, focado em React.",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview --port $PORT --host"
+    "start": "vite preview"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/matcbv/povstore.git"
+  },
+  "keywords": [],
+  "author": "Matheus Cerqueira Baião Victor",
+  "license": "MIT",
   "dependencies": {
     "@tailwindcss/vite": "^4.0.7",
     "firebase": "^11.4.0",
@@ -32,7 +40,6 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.1",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.3.2"
+    "tailwindcss": "^3.4.17"
   }
 }
