--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "autoprefixer": "^10.4.21",
     "dotenv": "^16.4.7",
     "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
